# helm-kubeconform

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .shellspec  LICENSE  MANIFEST.in  README.md  install.sh  plugin.py  plugin.yaml  pre_commit_wrapper.py  pyproject.toml  setup.py
.github/actions/shellspec/: action.yml
.github/workflows/: acceptance_tests.yml  ci.yml  linting.yml  unit_tests.yml
helm_kubeconform/: __init__.py  install.sh  plugin.py  pre_commit.py
tests/: __init__.py
tests/fixtures/: bad_values.yaml  good_values.yaml
tests/fixtures/chart-k8s/: Chart.yaml  values.yaml
tests/fixtures/chart-k8s/templates/: _helpers.tpl  deployment.yaml  service.yaml  serviceaccount.yaml
tests/fixtures/chart-ocp/: Chart.yaml
tests/fixtures/chart-ocp/templates/: _helpers.tpl  deploymentConfig.yaml  service.yaml
tests/pytest/: test_plugin.py  test_pre_commit.py
tests/shellspec/: spec_helper.sh
