[project]
name = "helm-kubeconform"
version = "0.6.2-1"
requires-python = ">=3.8"

[project.optional-dependencies]
test = [
  "pre-commit",
  "pytest",
  "pytest-cov",
]
dev = [
  "helm-kubeconform[test]",
  "bandit",
  "black",
  "flake8",
  "Flake8-pyproject",
  "mypy",
  "pre-commit",
  "pydocstyle[toml]",
  "pylint",
  "pylint-per-file-ignores",
  "ruff",
  "tox",
]

[tool.setuptools]
py-modules = []

[tool.bandit]
exclude_dirs = [
  ".tox",
  ".venv",
  "coverage",
]
skips = [
  "B404",  # import_subprocess
  "B603",  # subprocess_without_shell_equals_true
  "B607",  # start_process_with_partial_path
]

[tool.black]
line-length = 79
target-version = [
  "py38",
]

[tool.coverage.run]
omit = [
  "tests/*",
]

[tool.flake8]
max-line-length = 79
exclude = [
  ".tox",
  ".venv",
  "coverage",
]

[tool.isort]
profile = "black"
force_single_line = true
force_sort_within_sections = true
py_version = 38
line_length = 79

[tool.mypy]
strict_optional = true
strict = true
python_version = "3.8"
exclude = [
  "build",
]

[tool.pydocstyle]
convention = "google"
match_dir = "^(?!tests)"

[tool.pylint.main]
py-version = "3.8"

[tool.pylint.master]
ignore = [
  ".tox",
  ".venv",
  "build",
  "coverage",
]
load-plugins = [
    "pylint_per_file_ignores",
]

[tool.pylint.format]
max-line-length = 79

[tool.pylint.messages_control]
disable = [
  "magic-value-comparison",
]

[tool.pylint-per-file-ignores]
tests = "missing-class-docstring,missing-function-docstring,missing-module-docstring"

[tool.pytest.ini_options]
addopts = [
  "--cov=.",
  "--cov-report=term-missing",
  "--cov-report=xml:coverage/pytest/cobertura.xml",
]

[tool.ruff]
line-length = 79
target-version = "py38"
select = [
  "ALL",
]
ignore = [
  "ANN101",  # flake8-annotations
  "COM",     # flake8-commas
  "FBT",     # flake8-boolean-trap
  "PT009",   # flake8-pytest-style
  "S603",    # flake8-bandit
  "S607",    # flake8-bandit
  "SIM112",  # flake8-simplify
  "TRY",     # tryceratops
]

[tool.ruff.flake8-type-checking]
strict = true

[tool.ruff.isort]
force-single-line = true
force-sort-within-sections = true

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"tests/*" = [
  "D",  # pydocstyle
]

[tool.tox]
legacy_tox_ini = """
[tox]
min_version = 4.0
envlist = py38,py39,py310,py311
skip_missing_interpreters = True

[testenv]
deps = -e .[test]
allowlist_externals = bash
commands =
  pytest
  bash shellspec --kcov --sandbox --pattern "*/unit_testing_*_spec.sh"

[testenv:lint]
deps = -e .[test]
commands =
  pre-commit run -a

[testenv:acceptance]
allowlist_externals = bash
deps = -e .[test]
commands =
  bash shellspec --pattern "*/acceptance_*_spec.sh"
"""
