[project]
authors = [
  { name = "Mohamed El Morabity", email = "melmorabity@fedoraproject.org" },
]
classifiers = [
  "Environment :: Console",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Quality Assurance",
]
description = "Kubeconform Helm plugin"
keywords = [
  "helm",
  "helm-chart",
  "helm-plugin",
  "kubeconform",
  "lint",
  "linter",
  "validate",
  "validator",
]
license = { text = "GPL-3.0-or-later" }
name = "helm-kubeconform"
readme = "README.md"
requires-python = ">=3.9"
version = "0.6.7.1"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project.scripts]
pre-commit-helm-kubeconform = "helm_kubeconform.pre_commit:main"

[project.optional-dependencies]
dev = [
  "helm-kubeconform[test]",
  "mypy",
  "pre-commit",
  "ruff",
  "types-setuptools",
  "typing_extensions",
]
test = ["pre-commit", "pytest", "pytest-cov", "tox"]

[tool.setuptools]
packages = ["helm_kubeconform"]

[tool.coverage.run]
omit = ["tests/*"]

[tool.mypy]
exclude = ["build"]
python_version = "3.9"
strict = true
strict_optional = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = [
  "--cov-report=term-missing",
  "--cov-report=xml:coverage/pytest/cobertura.xml",
  "--cov=helm_kubeconform",
]

[tool.ruff]
line-length = 79
target-version = "py39"

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint]
ignore = [
  "COM812", # flake8-commas
  "FBT",    # flake8-boolean-trap
  "S603",   # flake8-bandit
  "S607",   # flake8-bandit
  "TRY",    # tryceratops
]
select = ["ALL"]

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.ruff.lint.isort]
force-single-line = true
force-sort-within-sections = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
  "D",  # pydocstyle
  "PT", # flake8-pytest-style
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.tox]
legacy_tox_ini = """
[tox]
min_version = 4.0
envlist = py39,py310,py311,py312,py313
skip_missing_interpreters = True

[testenv]
deps = -e .[test]
allowlist_externals = bash
commands =
  pytest
  bash shellspec --kcov --sandbox --pattern "*/unit_testing_*_spec.sh"

[testenv:lint]
deps = -e .[dev]
commands =
  pre-commit run -a

[testenv:acceptance]
allowlist_externals = bash
deps = -e .[test]
commands =
  bash shellspec --pattern "*/acceptance_*_spec.sh"
"""
